--- a/tutorial/enumerate().ipynb
+++ b/tutorial/enumerate().ipynb
@@ -296,13 +296,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 probability\n",
+      "1 algorithm\n",
+      "2 c++\n"
+     ]
+    }
+   ],
    "source": [
-    "for i,course in enumerate(cou)"
+    "for i,course in enumerate(course):\n",
+    "    print i,course"
    ]
   }
  ],
